--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "saas-web-dev-s",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,7 +10,8 @@
     "lint": "next lint",
     "db:generate": "npx drizzle-kit generate",
     "db:migrate": "npx drizzle-kit migrate",
-    "db:studio": "npx drizzle-kit studio --verbose --port=3504"
+    "db:studio": "npx drizzle-kit studio --verbose --port=3504",
+    "db:updateCountryGroups": "tsx --env-file=.env ./src/tasks/updateCountryGroups.ts"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.0.1",
@@ -21,8 +23,10 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.2",
+    "@radix-ui/react-tooltip": "^1.1.3",
     "@t3-oss/env-nextjs": "^0.11.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -36,6 +40,7 @@
     "svix": "^1.37.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
+    "tsx": "^4.19.2",
     "twitter-api-sdk": "^1.2.1",
     "zod": "^3.23.8"
   },
