--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,11 @@ DATABASE_URL=
 
 
 CRON_SECRET=
+
+#Stripe
+
+STRIPE_SECRET_KEY=
+STRIPE_WEBHOOK_SECRET=
+STRIPE_BASIC_PLAN_STRIPE_PRICE_ID=
+STRIPE_STANDARD_PLAN_STRIPE_PRICE_ID=
+STRIPE_PREMIUM_PLAN_STRIPE_PRICE_ID=
