--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "drizzle-orm": "^0.35.3",
     "lucide-react": "^0.453.0",
     "next": "15.0.0",
+    "next-themes": "^0.4.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
