--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "tailwindcss-animate": "^1.0.7",
     "tsx": "^4.19.2",
     "twitter-api-sdk": "^1.2.1",
+    "usehooks-ts": "^3.1.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
