--- a/.env.example
+++ b/.env.example
@@ -25,3 +25,6 @@ STRIPE_WEBHOOK_SECRET=
 STRIPE_BASIC_PLAN_STRIPE_PRICE_ID=
 STRIPE_STANDARD_PLAN_STRIPE_PRICE_ID=
 STRIPE_PREMIUM_PLAN_STRIPE_PRICE_ID=
+
+#Development
+TEST_COUNTRY_CODE=US
