--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -37,7 +37,7 @@
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.35.3",
     "lucide-react": "^0.453.0",
-    "next": "15.0.0",
+    "next": "15.1.1",
     "next-themes": "^0.4.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -48,7 +48,6 @@
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "tsx": "^4.19.2",
-    "twitter-api-sdk": "^1.2.1",
     "usehooks-ts": "^3.1.0",
     "zod": "^3.23.8"
   },
